--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 </body>
 </html>
-=<div class="animation-wrapper">
+<div class="animation-wrapper">
   <div class="sphere-animation">
     <svg class="sphere" viewBox="0 0 440 440" stroke="rgba(80,80,80,.35)">
       <defs>
